# VR-STL-Viewer

./: .gitmodules  CMakeLists.txt  conanfile.txt
VR-STL-Viewer/: CMakeLists.txt
docker/dev/: windows.dockerfile
